src/org/mitre/midiki/compiler/parser/MKParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MKParser.java */

/****************************************************************************
 *
 * Copyright (C) 2004. The MITRE Corporation (http://www.mitre.org/). All Rights Reserved.
 * Consult the LICENSE file in the root of the distribution for terms and restrictions.
 *
 *       Release: 1.0
 *       Date: 24-August-2004
 *       Author: Carl Burke
 *
 *****************************************************************************/
package org.mitre.midiki.compiler.parser;

import java.util.*;

/**
 * MKParser parses generic scripts for the MITREkit, which we
 * must get a better name for.
 * There are a few sets of items which the kit will parse:
 * - words, variables, numeric and string constants
 * - expressions
 * - qualified names with three delimiters
 * - lists of items [,] and {;} forms ([,|] form?)
 *   (list of expressions and list of statement expressions, respectively)
 * - user-definable expressions mapping to assignment priority.
 *   (This includes colon or other arbitrary symbol delimiter!)
 * What we end up with is a very abstract syntax tree, with no
 * mapping to any semantic interpretation. This tree can then be
 * combined with a language specification which can verify that
 * the abstract syntax tree matches a program written for that
 * language. The languages will be very constrained, so that an
 * easily scriptable processor can handle them.
 */
public class MKParser/*@bgen(jjtree)*/implements MKParserTreeConstants, MKParserConstants {/*@bgen(jjtree)*/
  protected JJTMKParserState jjtree = new JJTMKParserState();
public Vector parse_errors;

public void dumpErrors()
{
  if (parse_errors.size()==0) {
    System.out.println("No errors.");
    return;
  }
  if (parse_errors.size()==1) {
    System.out.println(parse_errors.size()+" error.");
  } else {
    System.out.println(parse_errors.size()+" errors.");
  }
  Enumeration enum = parse_errors.elements();
  while (enum.hasMoreElements()) {
    ParseException pe = (ParseException)enum.nextElement();
    System.out.println(pe);
  }
}

private void reset_error_vector()
{
  if (parse_errors == null) {
    parse_errors = new Vector();
  } else {
    parse_errors.clear();
  }
}

private void statement_error() {
  ParseException e = generateParseException();
  statement_error(e); // print the error message
}
private void statement_error(ParseException e) {
  parse_errors.addElement(e);
  Token t;
  do {
    t = getNextToken();
  } while ((t.kind != SEMICOLON) && (t.kind != EOF));
  // The above loop consumes tokens all the way upto a token of
  // "kind". We use a do-while loop rather than a while because the
  // current token is the one immediately before the erroneous token
  // (in our case the token immediately before what should have been
  // "if"/"while".
}

private void block_error() {
  ParseException e = generateParseException();
  block_error(e); // print the error message
}
private void block_error(ParseException e) {
  parse_errors.addElement(e);
  Token t;
  do {
    t = getNextToken();
  } while ((t.kind != RBRACE) && (t.kind != EOF));
  // The above loop consumes tokens all the way upto a token of
  // "kind". We use a do-while loop rather than a while because the
  // current token is the one immediately before the erroneous token
  // (in our case the token immediately before what should have been
  // "if"/"while".
}

  public static void main(String args[]) {
    MKParser parser;
    if (args.length == 0) {
      System.out.println("MK Parser:  Reading from standard input . . .");
      parser = new MKParser(System.in);
    } else if (args.length == 1) {
      System.out.println("MK Parser:  Reading from file " + args[0] + " . . .");
      try {
        parser = new MKParser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        System.out.println("MK Parser:  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("MK Parser:  Usage is one of:");
      System.out.println("         java MKParser < inputfile");
      System.out.println("OR");
      System.out.println("         java MKParser inputfile");
      return;
    }
/*
    try {
      parser.javacc_input();
      System.out.println("MK Parser:  MK program parsed successfully.");
    } catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("MK Parser:  Encountered errors during parse.");
    }
*/
    try {
      ASTCompilationUnit n = parser.CompilationUnit();
      parser.dumpErrors();
      n.dump("");
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

/*****************************************
 * THE GRAMMAR SPECIFICATION STARTS HERE *
 *****************************************/

/*
 * Program structuring syntax follows.
 * Each source file is treated as a list of statements.
 */
  final public ASTCompilationUnit CompilationUnit() throws ParseException {
 /*@bgen(jjtree) CompilationUnit */
  ASTCompilationUnit jjtn000 = new ASTCompilationUnit(JJTCOMPILATIONUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
    reset_error_vector();
      try {
        StatementList();
        jj_consume_token(0);
      } catch (ParseException e) {
    // somehow we bubbled up to this level.
    // record the error without attempting to recover.
    parse_errors.addElement(e);
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/*
 * Name syntax follows.
 */
  final public ASTName Name() throws ParseException {
 /*@bgen(jjtree) Name */
    ASTName jjtn000 = new ASTName(JJTNAME);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);ASTQualifierList ql;
    try {
      Designator();
    jjtn000.setQualified(false);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
      case HASH:
        ql = QualifierList();
    jjtn000.setQualified(true); jjtn000.setQualType(ql.getQualType());
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Designator() throws ParseException {
 /*@bgen(jjtree) Designator */
  ASTDesignator jjtn000 = new ASTDesignator(JJTDESIGNATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        Identifier();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
        break;
      case VARIABLE:
        Variable();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Identifier() throws ParseException {
 /*@bgen(jjtree) Identifier */
  ASTIdentifier jjtn000 = new ASTIdentifier(JJTIDENTIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Variable() throws ParseException {
 /*@bgen(jjtree) Variable */
  ASTVariable jjtn000 = new ASTVariable(JJTVARIABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VARIABLE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    jjtn000.setName(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public ASTQualifierList QualifierList() throws ParseException {
 /*@bgen(jjtree) QualifierList */
  ASTQualifierList jjtn000 = new ASTQualifierList(JJTQUALIFIERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        DotQualifier();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_1;
          }
          DotQualifier();
        }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
    jjtn000.setQualType(ASTName.QUAL_DOT);
    jjtn000.refToken = token;
    {if (true) return jjtn000;}
        break;
      case HASH:
        HashQualifier();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case HASH:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          HashQualifier();
        }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
    jjtn000.setQualType(ASTName.QUAL_HASH);
    jjtn000.refToken = token;
    {if (true) return jjtn000;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void DotQualifier() throws ParseException {
 /*@bgen(jjtree) DotQualifier */
  ASTDotQualifier jjtn000 = new ASTDotQualifier(JJTDOTQUALIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DOT);
      Designator();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void HashQualifier() throws ParseException {
 /*@bgen(jjtree) HashQualifier */
  ASTHashQualifier jjtn000 = new ASTHashQualifier(JJTHASHQUALIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HASH);
      Designator();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*
 * Expression syntax follows.
 */
  final public void Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      LogicalExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYMBOL:
        AssignmentOperator();
        LogicalExpression();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AssignmentOperator() throws ParseException {
 /*@bgen(jjtree) AssignmentOperator */
  ASTAssignmentOperator jjtn000 = new ASTAssignmentOperator(JJTASSIGNMENTOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(SYMBOL);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.refToken = token;
    jjtn000.setOp(t.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
